# glfw-template-gameloop

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
